cmake_minimum_required(VERSION 3.12)
project (fizzbuzz)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT "fizzbuzz" )
include_directories(E:/include)
# add_executable(test ${SOURCES})
add_executable(fizzbuzz fizzbuzz.cpp stdafx.cpp stdafx.h)
